--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 | klompenvoetdansje |
 ---------------------
 
-'kralingse enkelband polonaise' 
+'kralingse enkelband polonaise, cheers!' 
 
 
 # cytokine
